--- a/index.html
+++ b/index.html
@@ -2,6 +2,11 @@
 <html>
     <body>
         <h1>Odin Recipes</h1>
-        <a href="/recipes/lasagna.html">World's Best Lasagna</a>
+        <ul>
+            <li><a href="recipes/spaghetti.html">Million Dollar Spaghetti</a></li>
+            <li><a href="recipes/lasagna.html">World's Best Lasagna</a></li>
+            <li><a href="recipes/chicken-milanese.html">Chicken Milanese</a></li>
+            <li><a href="recipes/burger.html">Spicy Chicken Burger with Beer Cheese Sauce</a></li>
+        </ul>
     </body>
 </html>
