--- a/index.html
+++ b/index.html
@@ -1,5 +1,8 @@
 <!doctype html>
 <html>
+    <head>
+        <link rel="stylesheet" href="styles.css" />
+    </head>
     <body>
         <h1>Odin Recipes</h1>
         <ul>
