added new styles after 06-cascade-fix

--- a/recipes/burger.html
+++ b/recipes/burger.html
@@ -1,18 +1,22 @@
 <!doctype html>
 <html>
+    <head>
+        <link rel="stylesheet" href="../styles.css" />
+    </head>
     <body>
+        <h1 class="page-title"><a href="../index.html">Odin Recipes</a></h1>
         <h1>Spicy Chicken Burger with Beer Cheese Sauce</h1>
         <img
             src="https://www.allrecipes.com/thmb/rN1NQIaAmYEhy84tAL8gFSn8_24=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/8387168_Spicy-Chicken-Burger-with-Beer-Cheese-Sauce_Chef-Mo_4x3-2b536ee8e8954b4abae280c8f52d3b00.jpg"
         />
         <h3>Description</h3>
-        <p>
+        <p class="description">
             The chicken for this spicy chicken burger with beer cheese sauce is marinated in beer and spices for 4
             hours, then grilled. There’s more beer in the quick stovetop cheese sauce that is poured over the top. Don't
             forget to grill the buns and add your favorite chicken burger toppings!
         </p>
         <h3>Ingredients</h3>
-        <ul>
+        <ul class="ingredients">
             <li>1/2 cup light beer</li>
             <li>1 tablespoons smoked paprika</li>
             <li>1 tablespoon chili powder</li>
@@ -22,7 +26,7 @@
             <li>4 hamburger buns</li>
         </ul>
         <h3>Beer Cheese Sauce</h3>
-        <ul>
+        <ul class="ingredients">
             <li>2 tablespoons butter</li>
             <li>2 tablespoons all-purpose flour</li>
             <li>1 cup half and half</li>
