--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -1,14 +1,20 @@
 <!doctype html>
 <html>
+    <head>
+        <link rel="stylesheet" href="../styles.css" />
+    </head>
     <body>
+        <h1 class="page-title"><a href="../index.html">Odin Recipes</a></h1>
         <h1>World's Best Lasagna</h1>
         <img
             src="https://www.allrecipes.com/thmb/MkKfYU4oim55CLp39DDuNMuyThA=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/23600-worlds-best-lasagna-armag-4x3-1-b24f9ad518d74090bf197828492c64a6.jpg"
         />
         <h3>Description</h3>
-        <p>This lasagna recipe takes a little work, but it is so satisfying and filling that it's worth it!</p>
+        <p class="description">
+            This lasagna recipe takes a little work, but it is so satisfying and filling that it's worth it!
+        </p>
         <h3>Ingredients</h3>
-        <ul>
+        <ul class="ingredients">
             <li>Meat: This super meaty lasagna has sweet Italian sausage and lean ground beef.</li>
             <li>Onion and garlic: An onion and two cloves of garlic are cooked with the meat to add tons of flavor.</li>
             <li>
