--- a/recipes/spaghetti.html
+++ b/recipes/spaghetti.html
@@ -1,17 +1,21 @@
 <!doctype html>
 <html>
+    <head>
+        <link rel="stylesheet" href="../styles.css" />
+    </head>
     <body>
+        <h1 class="page-title"><a href="../index.html">Odin Recipes</a></h1>
         <h1>Million Dollar Spaghetti</h1>
         <img
             src="https://www.allrecipes.com/thmb/yl3eX7BnfmluiTv1G6jAu5WGiZg=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/million-dollar-spaghetti-4x3-1dfe70862a9e4a7881184447548d01a7.png"
         />
         <h3>Description</h3>
-        <p>
+        <p class="description">
             Million dollar spaghetti is the perfect combination of noodles, lean ground beef sauce, cottage cheese,
             cream cheese, and sour cream. It's unbelievably good! Serve with garlic bread and salad.
         </p>
         <h3>Ingredients</h3>
-        <ul>
+        <ul class="ingredients">
             <li>Spaghetti: An 8-ounce package of spaghetti should make about eight servings.</li>
             <li>
                 Beef: You’ll need a pound of lean ground beef. You can use a mix of ground beef and ground turkey, if
