--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
         <link rel="stylesheet" href="styles.css" />
     </head>
     <body>
-        <h1>Odin Recipes</h1>
-        <ul>
+        <h1 class="page-title">Odin Recipes</h1>
+        <ul class="links">
             <li><a href="recipes/spaghetti.html">Million Dollar Spaghetti</a></li>
             <li><a href="recipes/lasagna.html">World's Best Lasagna</a></li>
             <li><a href="recipes/chicken-milanese.html">Chicken Milanese</a></li>
