--- a/recipes/chicken-milanese.html
+++ b/recipes/chicken-milanese.html
@@ -1,17 +1,21 @@
 <!doctype html>
 <html>
+    <head>
+        <link rel="stylesheet" href="../styles.css" />
+    </head>
     <body>
+        <h1 class="page-title"><a href="../index.html">Odin Recipes</a></h1>
         <h1>Chicken Milanese</h1>
         <img
             src="https://www.allrecipes.com/thmb/G5c7xJh5NLhHFdXLLfBwYoJ5Y0g=/960x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/3566647-chicken-milanese-naples34102-4x3-1-b5d7690dec5a414bb8565c7b63ce744e.jpg"
         />
         <h3>Description</h3>
-        <p>
+        <p class="description">
             I made this chicken Milanese after I couldn't find a recipe that would work with pasta. It's crispy, quick
             to make, and delicious!
         </p>
         <h3>Ingredients</h3>
-        <ul>
+        <ul class="ingredients">
             <li>2 large eggs.</li>
             <li>Kosher salt and ground black pepper to taste.</li>
             <li>¾ cup all-purpose flour.</li>
